[gd_scene load_steps=7 format=3 uid="uid://dwy62fpecrhen"]

[ext_resource type="Script" uid="uid://fh0cnw0xa7iy" path="res://game/skills/diamond_bullet/diamond_bullet.gd" id="1_vjdej"]
[ext_resource type="PackedScene" uid="uid://cwbyj0wl0k3ab" path="res://game/skills/diamond_bullet/diamond_bullet_projectile.tscn" id="2_i4kng"]
[ext_resource type="Texture2D" uid="uid://bclxn23pu2df8" path="res://game/skills/diamond_bullet/bullet.png" id="4_i4kng"]

[sub_resource type="Animation" id="Animation_weqfc"]
resource_name = "Active"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.752941)]
}

[sub_resource type="Animation" id="Animation_i4kng"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i4kng"]
_data = {
&"Active": SubResource("Animation_weqfc"),
&"RESET": SubResource("Animation_i4kng")
}

[node name="DiamondBullet" type="Node2D"]
script = ExtResource("1_vjdej")
projectile_scene = ExtResource("2_i4kng")
spread_walk = 4.0
use_times = 5
use_cooldown = 15
metadata/_custom_type_script = "uid://c7xh6wcxwv4d4"

[node name="ActiveMarker" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -120)
rotation = 0.523599
texture = ExtResource("4_i4kng")

[node name="AnimationPlayer" type="AnimationPlayer" parent="ActiveMarker"]
libraries = {
&"": SubResource("AnimationLibrary_i4kng")
}

[node name="Aim" type="Line2D" parent="."]
visible = false
z_index = 10
points = PackedVector2Array(64, 0, 4000, 0)
width = 32.0
default_color = Color(0, 0.623529, 1, 0.376471)

[node name="SpreadLeft" type="Line2D" parent="Aim"]
position = Vector2(64, -16)
points = PackedVector2Array(64, 0, 128, 0)
width = 4.0
default_color = Color(0, 0.623529, 1, 0.313726)

[node name="Outline" type="Line2D" parent="Aim/SpreadLeft"]
show_behind_parent = true
points = PackedVector2Array(64, 0, 128, 0)
width = 8.0
default_color = Color(0, 0, 1, 0.156863)

[node name="SpreadRight" type="Line2D" parent="Aim"]
position = Vector2(64, 16)
points = PackedVector2Array(64, 0, 128, 0)
width = 4.0
default_color = Color(0, 0.623529, 1, 0.313726)

[node name="Outline" type="Line2D" parent="Aim/SpreadRight"]
show_behind_parent = true
points = PackedVector2Array(64, 0, 128, 0)
width = 8.0
default_color = Color(0, 0, 1, 0.156863)

[node name="Outline" type="Line2D" parent="Aim"]
show_behind_parent = true
points = PackedVector2Array(64, 0, 4000, 0)
width = 36.0
default_color = Color(0, 0, 1, 0.25098)
